# spwl

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml
lib/: .cproject  .project  Makefile
lib/include/: SPWL.h  crc16.h  sha256.h
lib/src/: SPWL.cpp  sha256.cpp
test/: .cproject  .project  Dockerfile  Makefile
test/include/: SPWL-test.h
test/src/: SPWL-test.cpp
